<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:stretchColumns="1">

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:id="@+id/textHeading"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10px"
                   android:layout_marginTop="10px"
                   android:layout_span="2"
                   android:text="@string/app_name"
                   android:textAlignment="center"
                   android:textStyle="bold" />
           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" >

               <TextView
                   android:id="@+id/textDividend"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/dividend" />

               <EditText
                   android:id="@+id/editDividend"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:inputType="numberDecimal"
                   android:text="" />

           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" >

               <TextView
                   android:id="@+id/textDivisor"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/divisor" />

               <EditText
                   android:id="@+id/editDivisor"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:inputType="numberDecimal"
                   android:text="" />

           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" >

               <Button
                   android:id="@+id/buttonDivide"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_span="2"
                   android:text="@string/btn_divide"/>


           </TableRow>


           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" >

               <TextView
                   android:id="@+id/textOutput"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/result"
                   android:visibility="invisible" />

               <TextView
                   android:id="@+id/textResult"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:visibility="invisible" />
           </TableRow>
       </TableLayout>

   </LinearLayout>
