<resources>
    <string name="app_name">Divisionsrechner</string>
    <string name="dividend">Dividend: </string>
    <string name="divisor">Divisor: </string>
    <string name="btn_divide">Dividiere</string>
    <string name="result">Output: </string>
    <string name="error">Fehler: </string>
    <string name="divisor_zero">Divisor darf nicht 0 sein.</string>
</resources>
